<resources>
    <string name="app_name">ToInet</string>
    <string name="app_description">ToInet — это инструмент, который позволяет использовать интернет через прокси-сервера.</string>
    <string name="menu_settings">Настройки</string>
    <string name="system_vpn_settings">Настройки Android VPN</string>
    <string name="menu_log">Логи</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_exit">Выход</string>
    <string name="wizard_details_msg">ToInet — это приложение с открытым исходным кодом, которое обеспечивает VPN-туннель, локальный прокси HTTP Connect (5267) и SOCKS-прокси (5242) в сеть.</string>
    <string name="pref_general_group">Общие</string>
    <string name="pref_start_boot_title">Автоматический запуск ToInet при загрузке системы</string>
    <string name="pref_start_boot_summary">Автоматически запускать ToInet и подключаться к сети при загрузке вашего Android-устройства</string>
    <string name="pref_node_configuration">Конфигурация узла</string>
    <string name="pref_node_configuration_summary">Это дополнительные настройки, которые могут снизить вашу анонимность</string>
    <string name="pref_entrance_node">Входные узлы</string>
    <string name="pref_entrance_node_summary">Отпечатки, псевдонимы, страны и адреса для первого прыжка</string>
    <string name="pref_entrance_node_dialog">Введите входные узлы</string>
    <string name="pref_allow_background_starts_title">Разрешить фоновую загрузку</string>
    <string name="pref_allow_background_starts_summary">Позволить любому приложению требовать от ToInet запускать ToInet и относящиеся к нему службы</string>
    <string name="pref_proxy_title">Исходящий сетевой прокси (необязательно)</string>
    <string name="pref_proxy_type_title">Тип прокси</string>
    <string name="pref_proxy_type_summary">Протокол для использования прокси: HTTPS, Socks4, Socks5</string>
    <string name="pref_proxy_host_title">Хост прокси</string>
    <string name="pref_proxy_host_summary">Имя хоста прокси</string>
    <string name="pref_proxy_port_title">Порт прокси</string>
    <string name="pref_proxy_port_summary">Порт прокси</string>
    <string name="pref_proxy_username_title">Имя пользователя прокси</string>
    <string name="pref_proxy_username_summary">Имя пользователя прокси (необязательно)</string>
    <string name="pref_proxy_password_title">Пароль пользователя прокси</string>
    <string name="pref_proxy_password_summary">Пароль пользователя прокси (необязательно)</string>
    <string name="error">Ошибка</string>
    <string name="exit_nodes">Выходные узлы</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Отпечатки, псевдонимы, страны и адреса для последнего прыжка</string>
    <string name="enter_exit_nodes">Введите выходные узлы</string>
    <string name="exclude_nodes">Исключённые узлы</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Отпечатки, псевдонимы, страны и адреса для исключения</string>
    <string name="enter_exclude_nodes">Введите исключённые узлы</string>
    <string name="strict_nodes">Точные узлы</string>
    <string name="strict_nodes_description">Рассматривать настройки исключённых узлов как требование для построения всех цепочек. Это может нарушить функциональность, если ни одна цепочка не сможет быть создана с вашими настройками.</string>
    <string name="reachable_addresses">Доступные адреса</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Запускать как клиент за межсетевым экраном с ограничивающими политиками</string>
    <string name="reachable_ports">Доступные порты</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Порты, доступные из-за ограничительного сетевого экрана</string>
    <string name="enter_ports">Введите порты</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Включить вывод журнала отладки (требует использовать adb или aLogCat для просмотра)</string>
    <string name="project_home">Домашняя страница проекта:</string>
    <string name="orbot_url" translatable="false">https://github.com/AlexeyRF/</string>
    <string name="orbot_github" translatable="false">https://github.com/AlexeyRF</string>
    <string name="openssl_url" translatable="false">OpenSSL: http://www.openssl.org</string>
    <string name="third_party_software">Программы сторонних разработчиков: </string>
    <string name="version">Версия:</string>
    <string name="license">Лицензия:</string>
    <string name="hidden_service_request">Приложение хочет открыть onion-сервер на порту %1$s в сети. Это безопасно, если вы доверяете приложению.</string>
    <string name="set_locale_title">Язык</string>
    <string name="pref_disable_network_title">Автозасыпание без сети</string>
    <string name="pref_disable_network_summary">Переводить ToInet в спящий режим при отсутствии интернета</string>
    <string name="newnym">Вы переключились на новый идентификатор!</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Открыть прокси на всех интерфейсах</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Разрешить пирам Wi-Fi, привязанным устройствам и всем, кто может подключиться к вашему IP, доступ к ToInet</string>
    <string name="pref_socks_title">ToInet SOCKS</string>
    <string name="pref_socks_summary">Порт, на котором ToInet предоставляет свой SOCKS-прокси (по умолчанию: 5242, 0 — для отключения)</string>
    <string name="pref_socks_dialog">Настройка порта SOCKS</string>
    <string name="pref_http_title">ToInet HTTP</string>
    <string name="pref_http_summary">Порт, на котором ToInet предлагает свой HTTP-прокси (по умолчанию: 8118 или 0 для отключения)</string>
    <string name="pref_http_dialog">Конфигурация порта HTTP</string>
    <string name="pref_transport_title">Порт прозрачного прокси ToInet</string>
    <string name="pref_transport_summary">Порт, на котором ToInet предоставляет свой прозрачный прокси (по умолчанию: 9040, 0 — для отключения)</string>
    <string name="pref_transport_dialog">Настройка порта прозрачного прокси</string>
    <string name="pref_dnsport_title">Порт DNS ToInet</string>
    <string name="pref_dnsport_summary">Порт, на котором ToInet предоставляет свой DNS (по умолчанию: 9053, 0 — для отключения)</string>
    <string name="pref_dnsport_dialog">Настройка порта DNS</string>
    <string name="pref_torrc_title">Пользовательские настройки ToInetrc</string>
    <string name="pref_torrc_summary">ТОЛЬКО ДЛЯ ЭКСПЕРТОВ: внесите настройки напрямую в строки файла конфигурации ToInetrc</string>
    <string name="pref_torrc_dialog">Пользовательский ToInetrc</string>
    <string name="vpn_default_world">Мир (авто)</string>
    <string name="hidden_services">Скрытые службы</string>
    <string name="v3_hosted_services">Размещённые Onion-службы</string>
    <string name="v3_client_auth_activity_title">Авторизация клиента</string>
    <string name="v3_key_hash">Закрытый ключ x25519 в Base32</string>
    <string name="v3_onion">Домен .onion</string>
    <string name="v3_backup_key">Резервная копия ключа авторизации клиента</string>
    <string name="v3_backup_key_warning">Внимание: это может раскрыть ваш ключ другим приложениям</string>
    <string name="v3_delete_client_authorization">Удалить ключ авторизации клиента</string>
    <string name="v3_delete_client_authorization_confirm">Удалить авторизацию клиента</string>
    <string name="v3_backup_name_hint">Имя файла резервной копии…</string>
    <string name="v3_import_auth_private">Импорт .auth_private</string>
    <string name="confirm">Подтвердить</string>
    <string name="save">Сохранить</string>
    <string name="local_port">Локальный порт</string>
    <string name="onion_port">Порт onion</string>
    <string name="name">Имя</string>
    <string name="copy_address_to_clipboard">Скопировать адрес в буфер обмена</string>
    <string name="backup_service">Резервное копирование службы (Внимание: это может раскрыть конфигурацию вашей службы другим приложениям)</string>
    <string name="delete_service">Удалить службу</string>
    <string name="backup_saved_at_external_storage">Резервная копия сохранена на внешнем хранилище</string>
    <string name="backup_restored">Восстановлено из резервной копии</string>
    <string name="backup_port_exist">Ошибка: служба Onion уже использует порт %s</string>
    <string name="restore_backup">Восстановить из копии</string>
    <string name="confirm_service_deletion">Подтверждение удаления службы</string>
    <string name="service_type">Тип службы</string>
    <string name="please_restart_Orbot_to_enable_the_changes">Перезапустите ToInet для вступления изменения в силу</string>
    <string name="onion" translatable="false">.onion</string>
    <string name="disable">Отключить</string>
    <string name="enable">Включить</string>
    <string name="consider_disable_battery_optimizations">Работают размещённые службы, рассмотрите возможность отключения оптимизации батареи</string>
    <string name="consider_enable_battery_optimizations">Размещённые службы не активны, рассмотрите возможность включения оптимизации работы аккумулятора</string>
    <string name="pref_isolate_dest">Изолировать адреса назначения</string>
    <string name="pref_isolate_dest_summary">Использовать разные цепочки подключения для каждого адреса назначения</string>
    <string name="pref_isolate_port">Изолировать порты назначения</string>
    <string name="pref_isolate_port_summary">Использовать разные цепочки подключения для каждого порта назначения</string>
    <string name="pref_isolate_protocol">Изолировать протоколы клиентов</string>
    <string name="pref_isolate_protocol_summary">Использовать разные цепочки подключения для каждого протокола</string>
    <string name="pref_isolate_keep_alive">Оставлять изолированные цепочки живыми</string>
    <string name="pref_isolate_keep_alive_summary">Оставлять те изолированные цепочки живыми, которые имеют хотя бы одну активную группу с SOCKS-аутентификацией</string>
    <string name="pref_connection_padding">Прокладка соединения</string>
    <string name="pref_connection_padding_summary">Всегда включает прокладку соединения для защиты от некоторых форм анализа трафика. По умолчанию: авто</string>
    <string name="pref_reduced_connection_padding">Сокращённая прокладка соединения</string>
    <string name="pref_reduced_connection_padding_summary">Раньше закрывает ретранслированные соединения и отправляет меньше пакетов заполнения для уменьшения объёма передаваемых данных и использования батареи</string>
    <string name="pref_circuit_padding">Заполнение цепочки подключения</string>
    <string name="pref_circuit_padding_summary">Использовать заполнение цепочки подключения для защиты от некоторых форм анализа трафика</string>
    <string name="custom_bridges">Конфигурация</string>
    <string name="btn_configure">Настроить подключение</string>
    <string name="custom_bridges_subtitle">Получите конфиг и нажмите далее</string>
    <string name="connect">Подключить</string>
    <string name="enter_bridge_address">Вставьте мосты</string>
    <string name="socks_proxy_enable">Использовать прокси</string>
    <string name="socks_proxy_host">Адрес (Хост)</string>
    <string name="socks_proxy_port">Порт</string>
    <string name="socks_proxy_username">Логин (опционально)</string>
    <string name="socks_proxy_password">Пароль (опционально)</string>
    <string name="socks_proxy_dialog_title">Настройка Прокси</string>
    <string name="socks_proxy_type">Тип прокси</string>
    <string name="pref_byedpi_enabled_title">Включить ByeDPI</string>
    <string name="pref_byedpi_use_as_upstream_title">Использовать Byedpi как прокси для Tor</string>
    <string name="pref_byedpi_args_title">Аргументы командной строки</string>
    <string name="title_test">Подбор стратегий</string>
</resources>