<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bottom_sheet_rounded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <View
            android:id="@+id/handle"
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCustomBridgeHeader"
            style="@style/BottomSheetHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/custom_bridges"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/handle" />

        <ru.toinet.android.ui.core.NoPersonalizedLearningEditText
            android:id="@+id/etBridges"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="top|start"
            android:hint="@string/enter_bridge_address"
            android:inputType="textMultiLine"
            android:minHeight="200dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvCustomBridgeHeader"
            app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBridges">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/button_horizontal_large_margin"
                android:paddingEnd="@dimen/button_horizontal_large_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@android:string/cancel"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape_round"
                android:enabled="false"
                android:paddingStart="@dimen/button_horizontal_large_margin"
                android:paddingEnd="@dimen/button_horizontal_large_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/connect"
                android:textColor="@android:color/white"
                android:singleLine="true"
                app:backgroundTint="@color/orbot_btn_enabled_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>